Refactor Category
